Refactor code to remove duplicated CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <section class="content">
         <ul>
-          <li class="search-engine-optimization">
+          <li class="content-card" id="search-engine-optimization">
             <figure>
               <img
                 src="./assets/images/search-engine-optimization.jpg"
@@ -42,7 +42,7 @@
               visibility and find the right customers for your business.
             </p>
           </li>
-          <li id="online-reputation-management" class="online-reputation-management">
+          <li class="content-card" id="online-reputation-management">
             <figure>
               <img
                 src="./assets/images/online-reputation-management.jpg"
@@ -57,7 +57,7 @@
               the control over what potential customers see when they search for your business.
             </p>
           </li>
-          <li id="social-media-marketing" class="social-media-marketing">
+          <li class="content-card" id="social-media-marketing">
             <figure>
               <img
                 src="./assets/images/social-media-marketing.jpg"
@@ -77,7 +77,7 @@
     </main>
     <aside class="benefits">
       <ul>
-        <li class="benefit-lead">
+        <li class="benefit">
           <h3>Lead Generation</h3>
           <figure>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Image" />
@@ -87,7 +87,7 @@
             your website.
           </p>
         </li>
-        <li class="benefit-brand">
+        <li class="benefit">
           <h3>Brand Awareness</h3>
           <figure>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Image" />
@@ -97,7 +97,7 @@
             your business.
           </p>
         </li>
-        <li class="benefit-cost">
+        <li class="benefit">
           <h3>Cost Management</h3>
           <figure>
             <img src="./assets/images/cost-management.png" alt="Cost Management Image" />
